# rustic

./: Cargo.toml  README.md
src/: bus.rs  cpu.rs  lib.rs  model.rs
src/rom/: model.rs  reader.rs
tests/: bus.rs  cpu.rs
