[package]
name = "rustic"
version = "0.1.0"
authors = ["Rachel Forshee <rachel.i.forshee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"

[dev-dependencies]
mockall = "0.7.0"
cfg-if = "0.1.10"
expectest = "0.12.0"
