[package]
name = "rustic"
version = "0.1.0"
authors = ["Rachel Forshee <rachel.i.forshee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
lazy_static = "1.4.0"
nom = "5.1.1"

[dev-dependencies]
expectest = "0.12.0"
